# foocat_sv

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat_sv.rst  modules.rst
foocat_sv/: foocat_sv.py
tests/: test_foocat_sv.py
